--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,13 @@ dependencies:
   firebase_auth: "^0.20.1"
   cloud_firestore: "^0.16.0"
   timezone: "^0.8.0-dev-2"
+  fluttertoast: "^8.0.8"
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
