--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -3,7 +3,8 @@
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
-    <application android:usesCleartextTraffic="true">
+    <application android:usesCleartextTraffic="true"
+    android:label="DepEd Malolos Evaluation App">
         <!-- possibly other elements -->
       </application>
     <uses-permission android:name="android.permission.INTERNET"/>
